<resources>
    <string name="app_name">MQTTeste</string>
    <string name="title_light">Luz</string>
    <string name="title_accelerometer">Acelerômetro</string>
    <string name="title_gyroscope">Giroscópio</string>
    <string name="title_config">Configurações</string>

    <!-- GERAL -->
    <string name="sensor_unavailable">Sensor não disponível</string>
    <string name="mqtt_connected">MQTT Server Conectado</string>
    <string name="mqtt_connection_error">Não foi possível conectar-se ao MQTT Server</string>
    <string name="server_loading">Carregando Configurações do Servidor</string>

    <!-- Light view -->
    <string name="placeholder_light">Luminosidade</string>

    <!-- Accelerometer view-->
    <string name="placeholder_accel">Aceleração</string>
    <string name="accel_values">Eixo Z: %1$f \n Eixo X: %2$f \n Eixo Y: %3$f</string>

    <!-- Gyroscope view -->
    <string name="placeholder_gyro">Giroscópio</string>

    <!-- Config view-->
    <string name="mqtt_server_address">Ip do Servidor MQTT</string>
    <string name="mqtt_server_port">Porta do Servidor MQTT</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="radiobutton_mqtt">MQTT</string>
    <string name="radiobutton_client_servidor">Cliente x Servidor</string>
    <string name="default_mqtt_server">m11.cloudmqtt.com</string>
    <string name="default_mqtt_port">18446</string>
    <string name="default_mqtt_username">yhdytvpm</string>
    <string name="default_mqtt_password">2nMy0rfV-hKE</string>
    <string name="default_client_server_server">localhost</string>
    <string name="default_client_server_port">8080</string>
    <string name="default_client_server_username">root</string>
    <string name="default_client_server_password">root</string>
    <string name="reset_btn_txt">Restaurar Padrões</string>
    <string name="save_cfg_btn_txt">Salvar</string>
    <string name="save_conf_msg">Configurações Salvas</string>

    <!-- MQTT -->
    <string name="mqtt_msg_arrived">Mensagem de %1$s: %2$s</string>
    <string name="connection_success_msg">Conexão Estabelecida</string>
    <string name="connection_error_msg">Conexão Falhou</string>
</resources>
